// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip renders correctly 1`] = `
<Popover
  contentPosition={
    Array [
      "center",
      "bottom",
    ]
  }
  mode="hover"
  offsetX={0}
  offsetY={-10}
  onChange={[Function]}
  selector="body"
  triggerPosition={
    Array [
      "center",
      "top",
    ]
  }
>
  <PopoverTrigger>
    <span>
      trigger
    </span>
  </PopoverTrigger>
  <PopoverContent
    contentPosition={
      Array [
        "left",
        "top",
      ]
    }
    selector="body"
    triggerPosition={
      Array [
        "left",
        "bottom",
      ]
    }
  >
    <Component />
  </PopoverContent>
</Popover>
`;

exports[`Tooltip renders correctly 2`] = `
<Popover
  contentPosition={
    Array [
      "left",
      "bottom",
    ]
  }
  mode="hover"
  offsetX={0}
  offsetY={-10}
  onChange={[Function]}
  selector="body"
  triggerPosition={
    Array [
      "left",
      "top",
    ]
  }
>
  <PopoverTrigger>
    <span>
      trigger
    </span>
  </PopoverTrigger>
  <PopoverContent
    contentPosition={
      Array [
        "left",
        "top",
      ]
    }
    selector="body"
    triggerPosition={
      Array [
        "left",
        "bottom",
      ]
    }
  >
    <Component />
  </PopoverContent>
</Popover>
`;

exports[`Tooltip renders correctly 3`] = `
<Popover
  contentPosition={
    Array [
      "right",
      "bottom",
    ]
  }
  mode="hover"
  offsetX={0}
  offsetY={-10}
  onChange={[Function]}
  selector="body"
  triggerPosition={
    Array [
      "right",
      "top",
    ]
  }
>
  <PopoverTrigger>
    <span>
      trigger
    </span>
  </PopoverTrigger>
  <PopoverContent
    contentPosition={
      Array [
        "left",
        "top",
      ]
    }
    selector="body"
    triggerPosition={
      Array [
        "left",
        "bottom",
      ]
    }
  >
    <Component />
  </PopoverContent>
</Popover>
`;

exports[`Tooltip renders correctly 4`] = `
<Popover
  contentPosition={
    Array [
      "left",
      "center",
    ]
  }
  mode="hover"
  offsetX={10}
  offsetY={0}
  onChange={[Function]}
  selector="body"
  triggerPosition={
    Array [
      "right",
      "center",
    ]
  }
>
  <PopoverTrigger>
    <span>
      trigger
    </span>
  </PopoverTrigger>
  <PopoverContent
    contentPosition={
      Array [
        "left",
        "top",
      ]
    }
    selector="body"
    triggerPosition={
      Array [
        "left",
        "bottom",
      ]
    }
  >
    <Component />
  </PopoverContent>
</Popover>
`;

exports[`Tooltip renders correctly 5`] = `
<Popover
  contentPosition={
    Array [
      "left",
      "top",
    ]
  }
  mode="hover"
  offsetX={10}
  offsetY={0}
  onChange={[Function]}
  selector="body"
  triggerPosition={
    Array [
      "right",
      "top",
    ]
  }
>
  <PopoverTrigger>
    <span>
      trigger
    </span>
  </PopoverTrigger>
  <PopoverContent
    contentPosition={
      Array [
        "left",
        "top",
      ]
    }
    selector="body"
    triggerPosition={
      Array [
        "left",
        "bottom",
      ]
    }
  >
    <Component />
  </PopoverContent>
</Popover>
`;

exports[`Tooltip renders correctly 6`] = `
<Popover
  contentPosition={
    Array [
      "left",
      "bottom",
    ]
  }
  mode="hover"
  offsetX={10}
  offsetY={0}
  onChange={[Function]}
  selector="body"
  triggerPosition={
    Array [
      "right",
      "bottom",
    ]
  }
>
  <PopoverTrigger>
    <span>
      trigger
    </span>
  </PopoverTrigger>
  <PopoverContent
    contentPosition={
      Array [
        "left",
        "top",
      ]
    }
    selector="body"
    triggerPosition={
      Array [
        "left",
        "bottom",
      ]
    }
  >
    <Component />
  </PopoverContent>
</Popover>
`;

exports[`Tooltip renders correctly 7`] = `
<Popover
  contentPosition={
    Array [
      "center",
      "top",
    ]
  }
  mode="hover"
  offsetX={0}
  offsetY={10}
  onChange={[Function]}
  selector="body"
  triggerPosition={
    Array [
      "center",
      "bottom",
    ]
  }
>
  <PopoverTrigger>
    <span>
      trigger
    </span>
  </PopoverTrigger>
  <PopoverContent
    contentPosition={
      Array [
        "left",
        "top",
      ]
    }
    selector="body"
    triggerPosition={
      Array [
        "left",
        "bottom",
      ]
    }
  >
    <Component />
  </PopoverContent>
</Popover>
`;

exports[`Tooltip renders correctly 8`] = `
<Popover
  contentPosition={
    Array [
      "left",
      "top",
    ]
  }
  mode="hover"
  offsetX={0}
  offsetY={10}
  onChange={[Function]}
  selector="body"
  triggerPosition={
    Array [
      "left",
      "bottom",
    ]
  }
>
  <PopoverTrigger>
    <span>
      trigger
    </span>
  </PopoverTrigger>
  <PopoverContent
    contentPosition={
      Array [
        "left",
        "top",
      ]
    }
    selector="body"
    triggerPosition={
      Array [
        "left",
        "bottom",
      ]
    }
  >
    <Component />
  </PopoverContent>
</Popover>
`;

exports[`Tooltip renders correctly 9`] = `
<Popover
  contentPosition={
    Array [
      "right",
      "top",
    ]
  }
  mode="hover"
  offsetX={0}
  offsetY={10}
  onChange={[Function]}
  selector="body"
  triggerPosition={
    Array [
      "right",
      "bottom",
    ]
  }
>
  <PopoverTrigger>
    <span>
      trigger
    </span>
  </PopoverTrigger>
  <PopoverContent
    contentPosition={
      Array [
        "left",
        "top",
      ]
    }
    selector="body"
    triggerPosition={
      Array [
        "left",
        "bottom",
      ]
    }
  >
    <Component />
  </PopoverContent>
</Popover>
`;

exports[`Tooltip renders correctly 10`] = `
<Popover
  contentPosition={
    Array [
      "right",
      "center",
    ]
  }
  mode="hover"
  offsetX={-10}
  offsetY={0}
  onChange={[Function]}
  selector="body"
  triggerPosition={
    Array [
      "left",
      "center",
    ]
  }
>
  <PopoverTrigger>
    <span>
      trigger
    </span>
  </PopoverTrigger>
  <PopoverContent
    contentPosition={
      Array [
        "left",
        "top",
      ]
    }
    selector="body"
    triggerPosition={
      Array [
        "left",
        "bottom",
      ]
    }
  >
    <Component />
  </PopoverContent>
</Popover>
`;

exports[`Tooltip renders correctly 11`] = `
<Popover
  contentPosition={
    Array [
      "right",
      "top",
    ]
  }
  mode="hover"
  offsetX={-10}
  offsetY={0}
  onChange={[Function]}
  selector="body"
  triggerPosition={
    Array [
      "left",
      "top",
    ]
  }
>
  <PopoverTrigger>
    <span>
      trigger
    </span>
  </PopoverTrigger>
  <PopoverContent
    contentPosition={
      Array [
        "left",
        "top",
      ]
    }
    selector="body"
    triggerPosition={
      Array [
        "left",
        "bottom",
      ]
    }
  >
    <Component />
  </PopoverContent>
</Popover>
`;

exports[`Tooltip renders correctly 12`] = `
<Popover
  contentPosition={
    Array [
      "right",
      "bottom",
    ]
  }
  mode="hover"
  offsetX={-10}
  offsetY={0}
  onChange={[Function]}
  selector="body"
  triggerPosition={
    Array [
      "left",
      "bottom",
    ]
  }
>
  <PopoverTrigger>
    <span>
      trigger
    </span>
  </PopoverTrigger>
  <PopoverContent
    contentPosition={
      Array [
        "left",
        "top",
      ]
    }
    selector="body"
    triggerPosition={
      Array [
        "left",
        "bottom",
      ]
    }
  >
    <Component />
  </PopoverContent>
</Popover>
`;
